xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__single_slash_by_itself.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"/\")"
---
(
    Path(
        PathExpr {
            steps: [
                (
                    PrimaryExpr(
                        (
                            FunctionCall(
                                FunctionCall {
                                    name: Name {
                                        name: "root",
                                        namespace: Some(
                                            "http://www.w3.org/2005/xpath-functions",
                                        ),
                                    },
                                    arguments: [
                                        (
                                            Path(
                                                PathExpr {
                                                    steps: [
                                                        (
                                                            AxisStep(
                                                                AxisStep {
                                                                    axis: Self_,
                                                                    node_test: KindTest(
                                                                        Any,
                                                                    ),
                                                                    predicates: [],
                                                                },
                                                            ),
                                                            SourceSpan {
                                                                offset: SourceOffset(
                                                                    0,
                                                                ),
                                                                length: SourceOffset(
                                                                    0,
                                                                ),
                                                            },
                                                        ),
                                                    ],
                                                },
                                            ),
                                            SourceSpan {
                                                offset: SourceOffset(
                                                    0,
                                                ),
                                                length: SourceOffset(
                                                    0,
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            ),
                            SourceSpan {
                                offset: SourceOffset(
                                    0,
                                ),
                                length: SourceOffset(
                                    0,
                                ),
                            },
                        ),
                    ),
                    SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            1,
                        ),
                    },
                ),
            ],
        },
    ),
    SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            1,
        ),
    },
)
