xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__starts_single_slash.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"/child::foo\")"
---
Spanned {
    value: Path(
        PathExpr {
            steps: [
                Spanned {
                    value: PrimaryExpr(
                        Spanned {
                            value: FunctionCall(
                                FunctionCall {
                                    name: Name {
                                        name: "root",
                                        namespace: Some(
                                            "http://www.w3.org/2005/xpath-functions",
                                        ),
                                    },
                                    arguments: [
                                        Spanned {
                                            value: Path(
                                                PathExpr {
                                                    steps: [
                                                        Spanned {
                                                            value: AxisStep(
                                                                AxisStep {
                                                                    axis: Self_,
                                                                    node_test: KindTest(
                                                                        Any,
                                                                    ),
                                                                    predicates: [],
                                                                },
                                                            ),
                                                            span: SourceSpan {
                                                                offset: SourceOffset(
                                                                    0,
                                                                ),
                                                                length: SourceOffset(
                                                                    0,
                                                                ),
                                                            },
                                                        },
                                                    ],
                                                },
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    0,
                                                ),
                                                length: SourceOffset(
                                                    0,
                                                ),
                                            },
                                        },
                                    ],
                                },
                            ),
                            span: SourceSpan {
                                offset: SourceOffset(
                                    0,
                                ),
                                length: SourceOffset(
                                    0,
                                ),
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            1,
                        ),
                    },
                },
                Spanned {
                    value: AxisStep(
                        AxisStep {
                            axis: Child,
                            node_test: NameTest(
                                Name(
                                    Name {
                                        name: "foo",
                                        namespace: None,
                                    },
                                ),
                            ),
                            predicates: [],
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            1,
                        ),
                        length: SourceOffset(
                            10,
                        ),
                    },
                },
            ],
        },
    ),
    span: SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            11,
        ),
    },
}
