xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__static_function_call.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"my_function()\")"
---
(
    Path(
        PathExpr {
            steps: [
                (
                    PrimaryExpr(
                        (
                            FunctionCall(
                                FunctionCall {
                                    name: Name {
                                        name: "my_function",
                                        namespace: None,
                                    },
                                    arguments: [],
                                },
                            ),
                            0..13,
                        ),
                    ),
                    0..13,
                ),
            ],
        },
    ),
    0..13,
)
