xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__static_function_call_args.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"my_function(1, 2)\")"
---
(
    Path(
        PathExpr {
            steps: [
                PrimaryExpr(
                    (
                        FunctionCall(
                            FunctionCall {
                                name: Name {
                                    name: "my_function",
                                    namespace: None,
                                },
                                arguments: [
                                    (
                                        Path(
                                            PathExpr {
                                                steps: [
                                                    PrimaryExpr(
                                                        (
                                                            Literal(
                                                                Integer(
                                                                    1,
                                                                ),
                                                            ),
                                                            12..13,
                                                        ),
                                                    ),
                                                ],
                                            },
                                        ),
                                        12..13,
                                    ),
                                    (
                                        Path(
                                            PathExpr {
                                                steps: [
                                                    PrimaryExpr(
                                                        (
                                                            Literal(
                                                                Integer(
                                                                    2,
                                                                ),
                                                            ),
                                                            15..16,
                                                        ),
                                                    ),
                                                ],
                                            },
                                        ),
                                        15..16,
                                    ),
                                ],
                            },
                        ),
                        0..17,
                    ),
                ),
            ],
        },
    ),
    0..17,
)
