xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__static_function_call_fn_prefix.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"fn:root()\")"
---
(
    Path(
        PathExpr {
            steps: [
                (
                    PrimaryExpr(
                        (
                            FunctionCall(
                                FunctionCall {
                                    name: Name {
                                        name: "root",
                                        namespace: Some(
                                            "http://www.w3.org/2005/xpath-functions",
                                        ),
                                    },
                                    arguments: [],
                                },
                            ),
                            SourceSpan {
                                offset: SourceOffset(
                                    0,
                                ),
                                length: SourceOffset(
                                    9,
                                ),
                            },
                        ),
                    ),
                    SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            9,
                        ),
                    },
                ),
            ],
        },
    ),
    SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            9,
        ),
    },
)
