xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__static_function_call_placeholder.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"my_function(?, 1)\")"
---
(
    Path(
        PathExpr {
            steps: [
                PrimaryExpr(
                    InlineFunction(
                        InlineFunction {
                            params: [
                                Param {
                                    name: Name {
                                        name: "placeholder0",
                                        namespace: None,
                                    },
                                    type_: None,
                                },
                            ],
                            return_type: None,
                            body: [
                                (
                                    Path(
                                        PathExpr {
                                            steps: [
                                                PrimaryExpr(
                                                    FunctionCall(
                                                        FunctionCall {
                                                            name: Name {
                                                                name: "my_function",
                                                                namespace: None,
                                                            },
                                                            arguments: [
                                                                (
                                                                    Path(
                                                                        PathExpr {
                                                                            steps: [
                                                                                PrimaryExpr(
                                                                                    VarRef(
                                                                                        Name {
                                                                                            name: "placeholder0",
                                                                                            namespace: None,
                                                                                        },
                                                                                    ),
                                                                                ),
                                                                            ],
                                                                        },
                                                                    ),
                                                                    0..0,
                                                                ),
                                                                (
                                                                    Path(
                                                                        PathExpr {
                                                                            steps: [
                                                                                PrimaryExpr(
                                                                                    Literal(
                                                                                        Integer(
                                                                                            1,
                                                                                        ),
                                                                                    ),
                                                                                ),
                                                                            ],
                                                                        },
                                                                    ),
                                                                    15..16,
                                                                ),
                                                            ],
                                                        },
                                                    ),
                                                ),
                                            ],
                                        },
                                    ),
                                    0..0,
                                ),
                            ],
                        },
                    ),
                ),
            ],
        },
    ),
    0..17,
)
