xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__static_function_call_q.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"Q{http://example.com}something()\")"
---
Path(
    PathExpr {
        steps: [
            PrimaryExpr(
                FunctionCall(
                    FunctionCall {
                        name: Name {
                            name: "something",
                            namespace: Some(
                                "http://example.com",
                            ),
                        },
                        arguments: [],
                    },
                ),
            ),
        ],
    },
)
