xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__step_expr.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_step_expr(\"1\")"
---
(
    PrimaryExpr(
        (
            Literal(
                Integer(
                    1,
                ),
            ),
            SourceSpan {
                offset: SourceOffset(
                    0,
                ),
                length: SourceOffset(
                    1,
                ),
            },
        ),
    ),
    SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            1,
        ),
    },
)
