xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__string_literal.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_literal(\"'foo'\")"
---
String(
    "foo",
)
