xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__text_test.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"self::text()\")"
---
Path(
    PathExpr {
        steps: [
            AxisStep(
                AxisStep {
                    axis: Self_,
                    node_test: KindTest(
                        Text,
                    ),
                    predicates: [],
                },
            ),
        ],
    },
)
